--- a/airootfs/etc/skel/.config/fontconfig/fonts.conf
+++ b/airootfs/etc/skel/.config/fontconfig/fonts.conf
@@ -1,116 +1,30 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
-<!--Этот файл должен быть тут: /etc/fonts/local.conf-->
-<!--Составлено Malody для записи в блоге http://archlinux.org.ru/forum/topic/16691/ -->
 <fontconfig>
-<!-- Настройки отоброжения -->
   <match target="font">
-       <edit name="antialias" mode="assign">
-           <bool>true</bool>
-       </edit>
-       <edit name="autohint" mode="assign">
-           <bool>false</bool>
-       </edit>
-       <edit name="embeddedbitmap" mode="assign">
-           <bool>false</bool>
-       </edit>
-       <edit name="hinting" mode="assign">
-           <bool>true</bool>
-       </edit>
-       <edit name="hintstyle" mode="assign">
-<!--hintslight - для более "полных" шрифтов, hintfull - для более тонких -->
-           <const>hintslight</const>
-       </edit>
-       <edit name="lcdfilter" mode="assign">
-           <const>lcddefault</const>
-       </edit>
-       <edit name="rgba" mode="assign">
-           <const>rgb</const>
-       </edit>
-<!--Отключение хинтинга для Bold шрифтов-->
-	   <test name="weight" compare="more">
-        <const>medium</const>
-    </test>
+    <edit name="antialias" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="hinting" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="hintstyle" mode="assign">
+      <const>hintslight</const>
+    </edit>
+    <edit name="rgba" mode="assign">
+      <const>rgb</const>
+    </edit>
     <edit name="autohint" mode="assign">
-        <bool>false</bool>
+      <bool>true</bool>
     </edit>
-   </match>
-<!--Замена шрифтов MS на метрически совместимые ChromeOs https://wiki.archlinux.org/index.php/Metric-compatible_fonts -->
-  <alias>
-    <family>serif</family>
-    <prefer><family>Tinos</family></prefer>
-  </alias>
-  <alias>
-    <family>sans-serif</family>
-    <prefer><family>Arimo</family></prefer>
-  </alias>
-  <alias>
-    <family>sans</family>
-    <prefer><family>Arimo</family></prefer>
-  </alias>
-  <alias>
-    <family>monospace</family>
-    <prefer><family>Cousine</family></prefer>
-  </alias>
-     <!-- Map specific families to CrOS ones -->
-  <match>
-    <test name="family"><string>Arial</string></test>
-    <edit name="family" mode="assign" binding="strong">
-      <string>Arimo</string>
+    <edit name="lcdfilter" mode="assign">
+      <const>lcddefault</const>
     </edit>
-  </match>
-  <match>
-    <test name="family"><string>Helvetica</string></test>
-    <edit name="family" mode="assign" binding="strong">
-      <string>Arimo</string>
+    <edit name="dpi" mode="assign">
+      <double>96</double>
     </edit>
-  </match>
-  <match> <!-- Метрически не совместимая замена -->
-    <test name="family"><string>Verdana</string></test>
-    <edit name="family" mode="assign" binding="strong">
-      <string>Arimo</string>
-    </edit>
-  </match>
-  <match> <!-- Метрически не совместимая замена -->
-    <test name="family"><string>Tahoma</string></test>
-    <edit name="family" mode="assign" binding="strong">
-      <string>Arimo</string>
-    </edit>
-  </match>
-  <match>
-    <test name="family"><string>Times New Roman</string></test>
-    <edit name="family" mode="assign" binding="strong">
-      <string>Tinos</string>
-    </edit>
-  </match>
-  <match>
-    <test name="family"><string>Times</string></test>
-    <edit name="family" mode="assign" binding="strong">
-      <string>Tinos</string>
-    </edit>
-  </match>
-  <match> <!-- Метрически не совместимая замена -->
-    <test name="family"><string>Consolas</string></test>
-    <edit name="family" mode="assign" binding="strong">
-      <string>Cousine</string>
-    </edit>
-  </match>
-  <match>
-    <test name="family"><string>Courier New</string></test>
-    <edit name="family" mode="assign" binding="strong">
-      <string>Cousine</string>
-    </edit>
-  </match>
-  <match>
-    <test name="family"><string>Calibri</string></test>
-    <edit name="family" mode="assign" binding="strong">
-      <string>Carlito</string>
-    </edit>
-  </match>
-  <match>
-    <test name="family"><string>Cambria</string></test>
-    <edit name="family" mode="assign" binding="strong">
-      <string>Caladea</string>
-    </edit>
+    <test name="weight" compare="more">
+      <const>medium</const>
+    </test>
   </match>
 </fontconfig>
