--- a/airootfs/etc/skel/.config/skippy-xd/skippy-xd.rc
+++ b/airootfs/etc/skel/.config/skippy-xd/skippy-xd.rc
@@ -1,42 +1,26 @@
-# Copy this to ~/.skippy-xd.rc and edit it to your liking
-#
-# Notes:
-#
-# - keysym can be anything XStringToKeysym can handle
-#   (like F11, KP_Enter or implementation specific keysyms)
-#
-# - colors can be anything XAllocNamedColor can handle
-#   (like "black" or "#000000")
-#
-# - distance is a relative number, and is scaled according to the scale
-#   factor applied to windows
-#
-# - fonts are Xft font descriptions
-#
-# - booleans are "true" or anything but "true" (-> false)
-#
-
-#
-# - brighness is a floating point number (with 0.0 as neutral)
-#
-# - if the update frequency is a negative value, the mini-windows will only
-#   be updated when they're explicitly rendered (like, when they gain or
-#   lose focus).
-#
-# - the 'shadowText' option can be a color or 'none', in which case the
-#   drop-shadow effect is disabled
-#
-
 [general]
-keysym = F11
 distance = 40
 useNetWMFullscreen = true
 ignoreSkipTaskbar = true
 updateFreq = 10.0
-lazyTrans = false
+lazyTrans = true
+pipePath = /tmp/skippy-xd-fifo
+movePointerOnStart = true
+movePointerOnSelect = true
+movePointerOnRaise = true
+switchDesktopOnActivate = true
+useNameWindowPixmap = false
+forceNameWindowPixmap = false
+includeFrame = true
+allowUpscale = true
+showAllDesktops = true
+showUnmapped = true
+preferredIconSize = 32
+iconFillSpec = orig mid mid #282a36
+background = #282a36
 
 [xinerama]
-showAll = false
+showAll = true
 
 [normal]
 tint = black
@@ -49,10 +33,19 @@ tintOpacity = 0
 opacity = 255
 
 [tooltip]
-show = false
-border = #e0e0e0
-background = #404040
-opacity = 255
-text = #e0e0e0
-textShadow = black
-font = fixed-11:weight=bold
+show = true
+followsMouse = true
+offsetX = 20
+offsetY = 20
+align = left
+border = #344048
+background = #344048
+opacity = 240
+text = #afe1d2
+textShadow = none
+font = Clear Sans Medium 8
+
+[bindings]
+miwMouse1 = focus
+miwMouse2 = close-ewmh
+miwMouse3 = iconify
