--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -5,3 +5,4 @@ custom: https://money.yandex.ru/to/410011749909586
 github: # [ctlos, creio]
 liberapay: ctlos
 patreon: ctlos
+community_bridge: ctlos
