--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -1,8 +1,10 @@
 [options]
 HoldPkg      = pacman glibc
 Architecture = auto
+
 Color
 ILoveCandy
+VerbosePkgLists
 
 SigLevel          = Required DatabaseOptional
 LocalFileSigLevel = Optional
