--- a/airootfs/etc/X11/xorg.conf.d/30-touchpad.conf
+++ b/airootfs/etc/X11/xorg.conf.d/30-touchpad.conf
@@ -1,10 +1,11 @@
 Section "InputClass"
-    Identifier "touchpad"
+    Identifier "libinput touchpad catchall"
     Driver "libinput"
     MatchIsTouchpad "on"
+    MatchDevicePath "/dev/input/event*"
     Option "Tapping" "on"
     Option "TappingDrag" "on"
-    Option "AccelSpeed" "0.7"
+    Option "AccelSpeed" "0.25"
     Option "AccelProfile" "adaptive"
     Option "ScrollMethod" "twofinger"
     Option "MiddleEmulation" "on"
