--- a/efiboot/loader/entries/archiso-x86_64-speech-linux.conf
+++ b/efiboot/loader/entries/archiso-x86_64-speech-linux.conf
@@ -5,5 +5,5 @@ title   Ctlos Linux install medium (x86_64, UEFI)
 linux   /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
 initrd  /%INSTALL_DIR%/boot/intel-ucode.img
 initrd  /%INSTALL_DIR%/boot/amd-ucode.img
-initrd  /%INSTALL_DIR%/boot/x86_64/archiso.img
-options archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL%
+initrd  /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
+options archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% accessibility=on
