--- a/syslinux/archiso_pxe.cfg
+++ b/syslinux/archiso_pxe.cfg
@@ -1,39 +1,8 @@
 #
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-INCLUDE boot/syslinux/archiso_head.cfg
+INCLUDE archiso_head.cfg
 
-LABEL arch64_nbd
-TEXT HELP
-Boot the Ctlos Linux install medium using NBD.
-It allows you to install Ctlos Linux or perform system maintenance.
-ENDTEXT
-MENU LABEL Ctlos Linux install medium (x86_64, NBD)
-LINUX boot/x86_64/vmlinuz-linux
-INITRD boot/intel-ucode.img,boot/amd-ucode.img,boot/x86_64/archiso.img
-APPEND archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% archiso_nbd_srv=${pxeserver} checksum verify
-SYSAPPEND 3
+INCLUDE archiso_pxe-linux.cfg
 
-LABEL arch64_nfs
-TEXT HELP
-Boot the Ctlos Linux live medium using NFS.
-It allows you to install Ctlos Linux or perform system maintenance.
-ENDTEXT
-MENU LABEL Ctlos Linux install medium (x86_64, NFS)
-LINUX boot/x86_64/vmlinuz-linux
-INITRD boot/intel-ucode.img,boot/amd-ucode.img,boot/x86_64/archiso.img
-APPEND archisobasedir=%INSTALL_DIR% archiso_nfs_srv=${pxeserver}:/run/archiso/bootmnt checksum verify
-SYSAPPEND 3
-
-LABEL arch64_http
-TEXT HELP
-Boot the Ctlos Linux live medium using HTTP.
-It allows you to install Ctlos Linux or perform system maintenance.
-ENDTEXT
-MENU LABEL Ctlos Linux install medium (x86_64, HTTP)
-LINUX boot/x86_64/vmlinuz-linux
-INITRD boot/intel-ucode.img,boot/amd-ucode.img,boot/x86_64/archiso.img
-APPEND archisobasedir=%INSTALL_DIR% archiso_http_srv=http://${pxeserver}/ checksum verify
-SYSAPPEND 3
-
-INCLUDE boot/syslinux/archiso_tail.cfg
+INCLUDE archiso_tail.cfg
