--- a/syslinux/archiso_sys.cfg
+++ b/syslinux/archiso_sys.cfg
@@ -1,19 +1,11 @@
 #
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-INCLUDE boot/syslinux/archiso_head.cfg
+INCLUDE archiso_head.cfg
 
 DEFAULT arch64
 TIMEOUT 30
 
-LABEL arch64
-TEXT HELP
-Boot the Ctlos Linux install medium on BIOS.
-It allows you to install Ctlos Linux or perform system maintenance.
-ENDTEXT
-MENU LABEL Ctlos Linux install medium (x86_64, BIOS)
-LINUX boot/x86_64/vmlinuz-linux
-INITRD boot/intel-ucode.img,boot/amd-ucode.img,boot/x86_64/archiso.img
-APPEND archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL%
+INCLUDE archiso_sys-linux.cfg
 
-INCLUDE boot/syslinux/archiso_tail.cfg
+INCLUDE archiso_tail.cfg
