--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -5,6 +5,10 @@ Architecture = auto
 Color
 ILoveCandy
 VerbosePkgLists
+VerbosePkgLists
+# CheckSpace
+# TotalDownload
+# UseSyslog
 
 SigLevel          = Required DatabaseOptional
 LocalFileSigLevel = Optional
