--- a/pacman.conf
+++ b/pacman.conf
@@ -1,8 +1,13 @@
 [options]
 HoldPkg      = pacman glibc
 Architecture = auto
+
 Color
 ILoveCandy
+VerbosePkgLists
+# CheckSpace
+# TotalDownload
+# UseSyslog
 
 SigLevel          = Required DatabaseOptional
 LocalFileSigLevel = Optional
