--- a/syslinux/archiso_sys-linux.cfg
+++ b/syslinux/archiso_sys-linux.cfg
@@ -1,9 +1,20 @@
-LABEL arch64
-TEXT HELP
-Boot the Ctlos Linux install medium on BIOS.
-It allows you to install Ctlos Linux or perform system maintenance.
-ENDTEXT
-MENU LABEL Ctlos Linux install medium (x86_64, BIOS)
+# Default
+LABEL arch64 free
+MENU LABEL Boot Ctlos Linux (x86_64, open source)
 LINUX /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
 INITRD /%INSTALL_DIR%/boot/intel-ucode.img,/%INSTALL_DIR%/boot/amd-ucode.img,/%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
-APPEND archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL%
+APPEND archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% cow_spacesize=4G driver=free nouveau.modeset=1 radeon.modeset=1 i915.modeset=1
+
+# Nvidia propritary (Non-Free)
+LABEL arch64-nvidia
+MENU LABEL Boot Ctlos Linux (x86_64, NVIDIA)
+LINUX /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
+INITRD /%INSTALL_DIR%/boot/intel-ucode.img,/%INSTALL_DIR%/boot/amd-ucode.img,/%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
+APPEND archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% cow_spacesize=4G driver=nonfree nouveau.modeset=0 modprobe.blacklist=nouveau nvidia radeon.modeset=1 i915.modeset=1 nvme_load=yes
+
+# Copy to RAM boot option
+LABEL arch64-ctr
+MENU LABEL Boot Ctlos Linux (Copy to RAM)
+LINUX /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
+INITRD /%INSTALL_DIR%/boot/intel-ucode.img,/%INSTALL_DIR%/boot/amd-ucode.img,/%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
+APPEND archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% copytoram cow_spacesize=1G driver=free nouveau.modeset=1 radeon.modeset=1 i915.modeset=1
