--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -33,7 +33,7 @@ Include = /etc/pacman.d/ctlos-mirrorlist
 
 [ctlos-aur]
 SigLevel = Optional TrustAll
-Server = https://cloud.ctlos.ru/ctlos-aur
+Include = /etc/pacman.d/ctlos-mirrorlist
 
 [chaotic-aur]
 Include = /etc/pacman.d/chaotic-mirrorlist
