--- a/airootfs/etc/xdg/reflector/reflector.conf
+++ b/airootfs/etc/xdg/reflector/reflector.conf
@@ -1,6 +1,8 @@
 # Reflector configuration file for the systemd service.
 
 --save /etc/pacman.d/mirrorlist
+--ipv4
+--ipv6
 --protocol https,http
 --latest 15
 --sort rate
