--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,7 +1,5 @@
-# These are supported funding model platforms
-
+github: ctlos
 open_collective: ctlos
 custom: https://money.yandex.ru/to/410011749909586
 patreon: ctlos
-github: # [ctlos, creio]
 liberapay: ctlos
