--- a/airootfs/etc/mkinitcpio.conf
+++ b/airootfs/etc/mkinitcpio.conf
@@ -15,14 +15,15 @@ BINARIES=()
 # as-is and are not parsed in any way.  This is useful for config files.
 FILES=()
 
-HOOKS=(base udev modconf memdisk archiso archiso_loop_mnt archiso_pxe_common archiso_pxe_nbd archiso_pxe_http archiso_pxe_nfs archiso_kms block filesystems keyboard)
+HOOKS=(base udev modconf kms memdisk archiso archiso_loop_mnt archiso_pxe_common archiso_pxe_nbd archiso_pxe_http archiso_pxe_nfs block filesystems keyboard)
 
 # COMPRESSION
 # Use this to compress the initramfs image. By default, gzip compression
+COMPRESSION="zstd"
 #COMPRESSION="gzip"
 #COMPRESSION="bzip2"
 #COMPRESSION="lzma"
-COMPRESSION="xz"
+#COMPRESSION="xz"
 #COMPRESSION="lzop"
 #COMPRESSION="lz4"
 
