--- a/airootfs/etc/sddm.conf
+++ b/airootfs/etc/sddm.conf
@@ -1,11 +1,5 @@
-[General]
-#Numlock=on
-
 [Autologin]
+Relogin=false
 # /usr/share/xsessions
-Session=xfce.desktop
+Session=xfce
 User=liveuser
-
-[Theme]
-Current=slice
-CursorTheme=Qogir
