--- a/airootfs/etc/systemd/system/pacman-init.service
+++ b/airootfs/etc/systemd/system/pacman-init.service
@@ -1,10 +1,8 @@
-#
-# SPDX-License-Identifier: GPL-3.0-or-later
-
 [Unit]
 Description=Initializes Pacman keyring
 Requires=etc-pacman.d-gnupg.mount
-After=etc-pacman.d-gnupg.mount
+After=etc-pacman.d-gnupg.mount time-sync.target
+BindsTo=etc-pacman.d-gnupg.mount
 
 [Service]
 Type=oneshot
