--- a/grub/loopback.cfg
+++ b/grub/loopback.cfg
@@ -1,40 +1,8 @@
-# Load partition table and file system modules
-insmod part_gpt
-insmod part_msdos
-insmod fat
-insmod iso9660
-insmod ntfs
-insmod ntfscomp
-insmod exfat
-insmod udf
-
-# Use graphics-mode output
-if loadfont "${prefix}/fonts/unicode.pf2" ; then
-    insmod all_video
-    set gfxmode="auto"
-    terminal_input console
-    terminal_output console
-fi
-
-# Enable serial console
-insmod serial
-insmod usbserial_common
-insmod usbserial_ftdi
-insmod usbserial_pl2303
-insmod usbserial_usbdebug
-if serial --unit=0 --speed=115200; then
-    terminal_input --append serial
-    terminal_output --append serial
-fi
+# https://www.supergrubdisk.org/wiki/Loopback.cfg
 
 # Search for the ISO volume
-if [ -z "${ARCHISO_UUID}" ]; then
-    if [ -z "${ARCHISO_HINT}" ]; then
-        regexp --set=1:ARCHISO_HINT '^\(([^)]+)\)' "${cmdpath}"
-    fi
-    search --no-floppy --set=root --file '%ARCHISO_SEARCH_FILENAME%' --hint "${ARCHISO_HINT}"
-    probe --set ARCHISO_UUID --fs-uuid "${root}"
-fi
+search --no-floppy --set=archiso_img_dev --file "${iso_path}"
+probe --set archiso_img_dev_uuid --fs-uuid "${archiso_img_dev}"
 
 # Get a human readable platform identifier
 if [ "${grub_platform}" == 'efi' ]; then
@@ -62,13 +30,13 @@ timeout_style=menu
 
 menuentry "Ctlos Linux install medium (%ARCH%, ${archiso_platform})" --class arch --class gnu-linux --class gnu --class os --id 'archlinux' {
     set gfxpayload=keep
-    linux /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisodevice=UUID=${ARCHISO_UUID}
+    linux /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux archisobasedir=%INSTALL_DIR% img_dev=UUID=${archiso_img_dev_uuid} img_loop="${iso_path}"
     initrd /%INSTALL_DIR%/boot/intel-ucode.img /%INSTALL_DIR%/boot/amd-ucode.img /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux.img
 }
 
 menuentry "Ctlos Linux install medium with speakup screen reader (%ARCH%, ${archiso_platform})" --hotkey s --class arch --class gnu-linux --class gnu --class os --id 'archlinux-accessibility' {
     set gfxpayload=keep
-    linux /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisodevice=UUID=${ARCHISO_UUID} accessibility=on
+    linux /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux archisobasedir=%INSTALL_DIR% img_dev=UUID=${archiso_img_dev_uuid} img_loop="${iso_path}" accessibility=on
     initrd /%INSTALL_DIR%/boot/intel-ucode.img /%INSTALL_DIR%/boot/amd-ucode.img /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux.img
 }
 
@@ -110,7 +78,3 @@ menuentry 'System restart' --class reboot --class restart {
     echo 'System rebooting...'
     reboot
 }
-
-
-# GRUB init tune for accessibility
-play 600 988 1 1319 4
